apt-cacher-ng/base/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: apt-cacher-ng
  labels:
    name: apt-cacher-ng
spec:
  containers:
    - name: apt-cacher-ng
      image: sameersbn/apt-cacher-ng
      ports:
        - containerPort: 3142
          protocol: TCP
      volumeMounts:
        - mountPath: /var/cache/apt-cacher-ng
          name: data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: pvc-acng
#  volumes:
#    - name: data
#      emptyDir: {}
