apt-cacher-ng/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apt-cacher-ng
  labels:
    name: apt-cacher-ng
spec:
  type: LoadBalancer
  loadBalancerIP: 1.1.1.1
  ipFamilyPolicy: PreferDualStack
  ports:
    - port: 3142
      targetPort: 3142
      protocol: TCP
  selector:
    name: apt-cacher-ng
