apt-cacher-ng/base/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroutetcp.crd
spec:
  entryPoints:
    - apt-cacher-ng
  routes:
    - match: HostSNI(`*`)
      services:
        - name: apt-cacher-ng
          port: 3142
